--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,16 +6,23 @@ services:
   mongo:
     image: mongo
     restart: always
+    ports:
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
-
+      MONGO_INITDB_ROOT_PASSWORD: example
   mongo-express:
     image: mongo-express
+    container_name: mongo-express
     restart: always
     ports:
-      - 8080:8080
+      - "28081:8081"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: monteiro
-      ME_CONFIG_MONGODB_ADMINPASSWORD: monteiro
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: changeme
+      #ME_CONFIG_MONGODB_AUTH_DATABASE: admin
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+    depends_on:
+      - mongo
