--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,6 @@ services:
       ME_CONFIG_BASICAUTH_PASSWORD: changeme
       #ME_CONFIG_MONGODB_AUTH_DATABASE: admin
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
     depends_on:
       - mongo
