--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=workshop_mongo
-spring.data.mongodb.username=root
-spring.data.mongodb.password=example
-spring.data.mongodb.uri=mongodb://localhost:27017/workshop_mongo
+spring.data.mongodb.uri=mongodb://root:example@localhost:27017/workshop_mongo?authSource=admin
+
+
